feat: Criado CRUD tabela books
