# project_library_api/models/__init__.py
@@ -1,1 +1,2 @@
 from .users import Users
+from .books import Book
